tests/build/cases/widget/module_path_missing.stderr
error: expected a macro_rules `$crate` path to this widget mod
 --> cases/widget/module_path_missing.rs:4:1
  |
4 | #[widget]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `widget` (in Nightly builds, run with -Z macro-backtrace for more info)
